[gd_scene load_steps=16 format=2]

[ext_resource path="res://images/actors.png" type="Texture" id=1]
[ext_resource path="res://scripts/effects/PlayerBomb.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5625, 3.5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 208, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 224, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 240, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 288, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 256, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 288, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 208, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 224, 192, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "critical",
"speed": 20.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 8 ), SubResource( 9 ), SubResource( 9 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "countdown",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=13]
radius = 13.3148

[node name="PlayerBomb" type="Node2D"]
position = Vector2( 0.125, 0.0625 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerBombBody2D" type="KinematicBody2D" parent="."]
collision_layer = 64

[node name="PlayerBombHitbox" type="CollisionShape2D" parent="PlayerBombBody2D"]
position = Vector2( 0.4375, 1.4375 )
z_index = 5
shape = SubResource( 1 )

[node name="PlayerBombSprite" type="AnimatedSprite" parent="PlayerBombBody2D"]
position = Vector2( 0, -2 )
frames = SubResource( 12 )
animation = "explode"
playing = true

[node name="TimerToCritical" type="Timer" parent="PlayerBombBody2D"]

[node name="TimerToExplosion" type="Timer" parent="PlayerBombBody2D"]

[node name="ExplosionArea" type="Area2D" parent="PlayerBombBody2D"]
collision_layer = 304

[node name="ExplosionHitBox" type="CollisionShape2D" parent="PlayerBombBody2D/ExplosionArea"]
position = Vector2( 0.125, -1.625 )
shape = SubResource( 13 )
disabled = true

[connection signal="animation_finished" from="PlayerBombBody2D/PlayerBombSprite" to="." method="_on_PlayerBombSprite_animation_finished"]
[connection signal="timeout" from="PlayerBombBody2D/TimerToCritical" to="." method="_on_TimerToCritical_timeout"]
[connection signal="timeout" from="PlayerBombBody2D/TimerToExplosion" to="." method="_on_TimerToExplosion_timeout"]
